--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ContactManagementSystem1
+application.vendor=limxi
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,14 +27,13 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/ContactManagementSystem1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.swingx-all-1.6.4.jar=../../netbeans-8.0.2/ide/modules/ext/swingx-all-1.6.4.jar
-file.reference.swingx-all-1.6.4.jar-1=D:\\LiewPC\\Admin\\Undergraduate\\WIF3007 Sem 1 2019\\Assignment\\jar_files\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.swingx-all-1.6.4.jar}:\
-    ${file.reference.swingx-all-1.6.4.jar-1}
+    ${file.reference.swingx-all-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -68,7 +68,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Djava.security.policy=applet.policy
+run.jvmargs=-Djava.security.policy=applet.pol-Xmx256m
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
