--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.swingx-all-1.6.4.jar=../../netbeans-8.0.2/ide/modules/ext/swingx-all-1.6.4.jar
+file.reference.swingx-all-1.6.4.jar-1=/home/thechee/Documents/Acedemic/S1_21/WIF3007/Assignment2/swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.swingx-all-1.6.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
